syntax = "proto2";

option java_package = "protocol";

option java_outer_classname = "EnumProtos";

enum ColourProto 
{
    RED = 1; 
    BLUE = 2;
    ORANGE = 3;
    WHITE = 4;
}

enum ResourceTypeProto 
{
    BRICK = 1;
    LUMBER = 2;
    WOOL = 3;
    GRAIN = 4;
    ORE = 5;
    GENERIC = 6; // useful within the context of defining a generic port 
}

enum BuildingTypeProto
{
    SETTLEMENT = 1;
    CITY = 2;
}

enum DevelopmentCardProto 
{
    KNIGHT = 1;
    ROAD_BUILDING = 2;
    MONOPOLY = 3;
    YEAR_OF_PLENTY = 4;
    LIBRARY = 5;
    UNIVERSITY =69;
    //PALACE = 7;
    //MARKET = 8;
    //CHAPEL = 9;
}

enum TradeStatusProto 
{
    ACCEPT = 1;
    REJECT = 2;
}

enum ResultProto 
{
    SUCCESS = 1;
    FAILURE = 2;
}


